fea-rs/test-data/parse-tests/bad/glyphsapp_number_bad.fea
# https://glyphsapp.com/learn/tokens#g-number-values
feature test {
    pos A B $0;
    pos C D ${pad * * 2};
    pos E F ${pad pad};
    pos G H ${pad +};
} test;
